src/parser/grammar/test_samples/Invalid/legacy_use_syntax.5th
// Negative case: legacy 'use' syntax should fail
use MyOldModule;

main(): int {
    return 0;
}
